gateway-domain/gateway-domain.yml
# Ingress Gateway
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: http2
      hosts:
      - "*.fullcycle" # "site.com.br"
---
# Virtual Service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs-a
spec:
  hosts: 
  - "a.fullcycle"
  gateways:
    - "ingress-gateway"
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v1
---
# Virtual Service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-vs-b
spec:
  hosts: 
  - "b.fullcycle"
  gateways:
    - "ingress-gateway"
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v2
